--- a/TodoList/Pages/Index.razor
+++ b/TodoList/Pages/Index.razor
@@ -1,7 +1,10 @@
-﻿@page "/"
+﻿@using TodoList.Components;
+
+@page "/"
+
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<PersonSelector></PersonSelector>
