--- a/TodoList/Pages/Index.razor
+++ b/TodoList/Pages/Index.razor
@@ -7,4 +7,7 @@
 
 Welcome to your new app.
 
-<PersonSelector></PersonSelector>
+<br />
+<PersonSearchBar></PersonSearchBar>
+<hr />
+@*<PeopleList></PeopleList>*@
