--- a/TodoList/Components/TodoItem.razor
+++ b/TodoList/Components/TodoItem.razor
@@ -1,18 +1,33 @@
-﻿@*@page "/TodoItem"
+﻿@page "/TodoItem"
 
 @using TodoDataAccess
 @using TodoDataAccess.Models
 @using TodoDataAccess.DataAccess
+@using TodoList.Data.SqlDataAccess
+@using TodoList.ViewModels
 
+@inject ITodoItemDataAccess _todoData;
 
-<h3>TodoItem</h3>
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">@todoItem.Title</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+    </div>
+</div>
 
 
 @code {      
-    List<Person> people;
 
-    protected override Task OnInitializedAsync()
-    {
-        people = 
-    }
-}*@
+    [Parameter]
+    public int TodoItemID { get; set; }
+
+    public TodoItemModel todoItem { get; set; }
+
+    //protected override Task OnInitializedAsync()
+    //{
+    //    //todoItem = await _todoData.
+    //}
+}
