--- a/TodoList/Pages/Index.razor
+++ b/TodoList/Pages/Index.razor
@@ -2,12 +2,9 @@
 
 @page "/"
 
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
 <br />
-<PersonSearchBar></PersonSearchBar>
+@*<PersonSearchBar></PersonSearchBar>*@
 <hr />
+@* I'll need to figure out how to pass the PersonID clicked in the PeopleList to the PersonCard component. Something like event callbacks or something. *@
 @*<PeopleList></PeopleList>*@
+<PersonCard></PersonCard>
