--- a/TodoList/Components/PersonCard.razor
+++ b/TodoList/Components/PersonCard.razor
@@ -37,7 +37,7 @@ else
 
     protected async override Task OnInitializedAsync()
     {
-        Person = await _personData.GetPersonByName("Scarlett", "Robertson");
+        Person = await _personData.GetPersonByName("Dante", "Perez");
 
         //Person = new PersonModel { FirstName = "hello", LastName = "Goodbye", EmailAddress = "something@email.com" };
     }
