--- a/TodoList/Pages/Index.razor
+++ b/TodoList/Pages/Index.razor
@@ -6,5 +6,6 @@
 @*<PersonSearchBar></PersonSearchBar>*@
 <hr />
 @* I'll need to figure out how to pass the PersonID clicked in the PeopleList to the PersonCard component. Something like event callbacks or something. *@
-@*<PeopleList></PeopleList>*@
+<PeopleList></PeopleList>
 <PersonCard></PersonCard>
+<PersonSearchBar></PersonSearchBar>
